--- a/views/upload.html
+++ b/views/upload.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>HTML5 File Drag and Drop Upload with jQuery and PHP | Tutorialzine Demo</title>
+        <title>HTML5 File Upload with jQuery and django </title>
         
         <!-- Our CSS stylesheet file -->
         <link rel="stylesheet" href="/static/stylesheet/styles.css" />
@@ -15,16 +15,15 @@
     <body>
 		
 		<header>
-			<h1>HTML5 File Upload with jQuery and PHP</h1>
+			<h1>HTML5 File Upload with jQuery and django</h1>
 		</header>
-		
 		<div id="dropbox">
-			<span class="message">Drop images here to upload. <br /><i>(they will only be visible to you)</i></span>
+	  <input type="file" class="file1" value="Adauga fisier" multiple="multiple" />
+      <div class="change"></div>
 		</div>
 		
         <footer>
-	        <h2>HTML5 File Upload with jQuery and PHP</h2>
-            <a class="tzine" href="http://tutorialzine.com/2011/09/html5-file-upload-jquery-php/">Read &amp; Download on</a>
+	        <h2>HTML5 File Upload with jQuery and django</h2>
         </footer>
         
         <!-- Including The jQuery Library -->
@@ -36,6 +35,7 @@
 		<!-- The main script file -->
         <script src="/static/javascript/script.js"></script>
     
+</script>	
     </body>
 </html>
 
